@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-07-02T08:27:17Z",
+  "timestamp" : "2022-07-02T16:30:16Z",
   "count_outdated" : 218,
   "uniques_outdated" : 103,
   "count" : 242,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
