@@ -1,3 +1,10 @@
+2022-07-02T16:30:16Z:
+* notice: last 14d: unq all: 2 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 103 218 / 118 242
+* notice: next accum: outdated-unq outdated-all / unq all: 103 218 / 118 242
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-18 2022-07-02]
+
 2022-07-02T08:27:17Z:
 * notice: last 14d: unq all: 2 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 103 218 / 117 242
